# pdf-toc-studio

./: .gitignore  README.md  package.json
app/: main.py
core/: __init__.py  bridge.py  cli.py  toc_engine.py
docs/: architecture.md  development.md  mvp-plan.md  product-requirements.md  roadmap.md
frontend/: index.html  package.json
frontend/src/: App.tsx  styles.css  tauriBridge.ts  types.ts
scripts/: package-macos.sh
skills/pdf-toc-studio/: SKILL.md
skills/pdf-toc-studio/agents/: openai.yaml
skills/pdf-toc-studio/scripts/: run_pdf_toc_studio.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
